unbranded version, maintains license reference to original but removes all branded variables and copy

--- a/src/_templates/prototype.html
+++ b/src/_templates/prototype.html
@@ -1,12 +1,3 @@
 <!--
-  /######      /######     /######
- /##____##    /##____##   /##____##
-| ##   /##   | ##   /##   |__/  /##
-| #######/   | #######/      /###/
-| ## ##      | ##____/      |____##
-| ##/ ##     | ##         /##    ##
-| ##\ /##    | ##        |  ######/
-|__/ /__/    |__/        |_______/
-
-Another RP3 Pre Production Prototype
+Another Pre Production Prototype
 -->
