--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		 <title>RP3 Front End Assets</title>
+		 <title>Front End Assets</title>
 		 <style type="text/css">
 		 .block {
 		 	max-width: 960px; margin: 0 auto; padding: 10px;
